; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_debugger.c_doCrash.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_debugger.c_doCrash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"child: crashing...\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8**)* @doCrash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @doCrash(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %7 = call i32 @SetErrorMode(i32 0)
  %8 = call i32 @SetUnhandledExceptionFilter(i32* null)
  %9 = load i32, i32* %3, align 4
  %10 = icmp sge i32 %9, 4
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = call i32 (...) @GetCurrentProcessId()
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load i8**, i8*** %4, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 3
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @save_blackbox(i8* %16, %struct.TYPE_3__* %6, i32 4)
  br label %18

18:                                               ; preds = %11, %2
  %19 = call i32 @trace(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %5, align 8
  %20 = load i8*, i8** %5, align 8
  store volatile i8 0, i8* %20, align 1
  ret void
}

declare dso_local i32 @SetErrorMode(i32) #1

declare dso_local i32 @SetUnhandledExceptionFilter(i32*) #1

declare dso_local i32 @GetCurrentProcessId(...) #1

declare dso_local i32 @save_blackbox(i8*, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @trace(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
